Name:                distruptor-hs
Version:             0.1
License:             BSD3
License-file:        LICENSE
Author:              Krzysztof Skrzętnicki
Category:            Concurrency
Build-type:          Simple
Cabal-version:       >=1.2

Executable unicast-test
  Main-is:             unicast-test.hs
  Build-depends:       base, dequeue, queue, BoundedChan, bounded-tchan, vector, strict-concurrency, split, stm, time, deepseq
  Other-modules:       Conf, Test.BChan, Test.Chan, Test.Dequeue, Test.ManyQueueStrict, Test.ManyQueue, Test.ManyQueueVector, Test.Queue 
  Ghc-options: -O2 -threaded -rtsopts